src/objects/DMAPP__AM_Plan_Unit_Answer__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__AM_Plan_Unit_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AM Plan Unit Question</label>
        <referenceTo>DMAPP__AM_Plan_Unit_Question__c</referenceTo>
        <relationshipLabel>AM Plan Unit Answers</relationshipLabel>
        <relationshipName>AM_Plan_Unit_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Answer__c</fullName>
        <label>Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__DeakmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DeakmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Note_Entered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Note Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Note__c</fullName>
        <label>Note</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Unit__c</fullName>
        <label>Plan Unit</label>
        <referenceTo>DMAPP__AM_Plan_Unit__c</referenceTo>
        <relationshipLabel>AM Plan Unit Answers</relationshipLabel>
        <relationshipName>AM_Plan_Unit_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AM Plan Unit Answer</label>
    <nameField>
        <label>AM Plan Unit Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Plan Unit Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>